Add CSS theming system with sample themes

--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
       "./resources/**"
     ],
     "extraFiles": [
-      "./data/**"
+      "./data/**",
+	  "./themes/**"
     ],
     "publish": {
       "provider": "github",
