Add spacing to each setting, copy translations when compiling

--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     ],
     "extraFiles": [
       "./data/**",
-	  "./themes/**"
+      "./themes/**",
+      "./translations/**"
     ],
     "publish": {
       "provider": "github",
